# unifi-protect-alerts

./: .gitignore  Dockerfile  README.md  docker-compose.yaml  id_to_name.json  main.py  notify.py  probe_integration.py  probe_unvr.py  pyproject.toml  unifi.py  vision.py
Archive/: event_listener.py  main_latest_09-07-2025.py  main_latest_older.py  main_oldest.py  watcher.py
